    AES-256 if useful.  [T7472]

  * gpg: Fix regression in key generation from existing card key.
    [T7309,T7457]

  * gpg: Print a warning if the card backup key could not be written.
    [T2169]

  * The --supervised options of gpg-agent and dirmngr have been
    renamed to --deprecated-supervised as preparation for their
    removal.  [rGa019a0fcd8]


  See-also: gnupg-announce/2024q4/000xxx.html
  Release-info: https://dev.gnupg.org/T7442


Noteworthy changes in version 2.5.2 (2024-12-05)
------------------------------------------------

  * gpg: Add option 16 to --full-gen-key to create ECC+Kyber.  [T6638]

  * gpg: For composite algos add the algo string to the colons
    listings.  [T6638]

  * gpg: Validate the trustdb after the import of a trusted key.
    [T7200]

  * gpg: Exclude expired trusted keys from the key validation process.
    [T7200]

  * gpg: Fix a wrong decryption failed status for signed and OCB
    encrypted messages without a signature verification key.  [T7042]

  * gpg: Retain binary representation for import->export with Ed25519
    key signatures.  [T7426]

  * gpg: Fix comparing ed448 to ed25519 with --assert-pubkey-algo.
    [T7425]

  * gpg: Avoid a failure exit code for expired ultimately trusted
    keys.  [T7351]

  * gpg: Emit status error for an invalid ADSK.  [T7322]

  * gpg: Allow the use of an ADSK subkey as ADSK subkey.  [T6882]

  * gpg: Fix --quick-set-expire for V5 subkey fingerprints.  [T7298]

  * gpg: Robust error handling for SCD READKEY.  [T7309]

  * gpg: Fix cv25519 v5 export regression.  [T7316]

  * gpgsm: Nearly fourfold speedup of validated certificate listings.
    [T7308]

  * gpgsm: Improvement for some rare P12 files.  [rGf50dde6269]

  * gpgsm: Terminate key listing on output write error.  [T6185]

  * agent: Add option --status to the LISTRUSTED command.
    [rG4275d5fa7a]

  * agent: Fix detection of the yet unused trustflag de-vs.  [T5079]
